
project(samples)

add_subdirectory(Observer)
add_subdirectory(Strategy)
add_subdirectory(TemplateMethod)
add_subdirectory(Decorator)
add_subdirectory(Bridge)
add_subdirectory(FactoryMethod)
add_subdirectory(AbstractFactory)
add_subdirectory(Singleton)
add_subdirectory(Builder)
add_subdirectory(Flyweight)
add_subdirectory(Prototype)
add_subdirectory(Proxy)
add_subdirectory(Adapter)
add_subdirectory(State)
add_subdirectory(Visitor)
add_subdirectory(Interpreter)
add_subdirectory(Memento)
add_subdirectory(Command)
add_subdirectory(ChainOfResponsibility)
add_subdirectory(Iterator)